--- a/main.html
+++ b/main.html
@@ -94,19 +94,19 @@
             <div class="slide_wrap" style="position:relative;">
                 <div class="swiper-container_top">
                     <div class="swiper-wrapper">
-                      <div class="swiper-slide mt_img" style="background-image:url('images/main/nature-111.jpg');background-repeat:no-repeat;background-size:cover;width:100%;height:963px;">
+                      <div class="swiper-slide mt_img" style="background-image:url('images/main/nature-111.jpg?ver=2');background-repeat:no-repeat;background-size:cover;width:100%;height:963px;">
                         <div class="mt_img_text">
                             <p>전국 6500여 매장 3만여<br />골프존 시뮬레이터&스크린</p>
                             <p>골프존 인프라는 여러분의 광고를<br />보다 빠르고 효과적으로 확산시켜드립니다.</p>
                         </div>
                       </div>
-                      <div class="swiper-slide mt_img" style="background-image:url('images/main/nature-222.jpg');background-repeat:no-repeat;background-size:cover;width:100%;height:963px;">
+                      <div class="swiper-slide mt_img" style="background-image:url('images/main/nature-222.jpgver=2');background-repeat:no-repeat;background-size:cover;width:100%;height:963px;">
                         <div class="mt_img_text">
                             <p>경제력이 높은 3050 타겟<br />이용횟수 매일 164,383 라운드</p>
                             <p>골프존의 프리미엄 타겟은 언제든<br />여러분의 제품과 서비스를 경험할 준비가 되어있습니다.</p>
                         </div>
                       </div>
-                      <div class="swiper-slide mt_img" style="background-image:url('images/main/nature-333.jpg');background-repeat:no-repeat;background-size:cover;width:100%;height:963px;">
+                      <div class="swiper-slide mt_img" style="background-image:url('images/main/nature-333.jpgver=2');background-repeat:no-repeat;background-size:cover;width:100%;height:963px;">
                         <div class="mt_img_text">
                             <p>업계 최고 수준의 몰입감을 제공,<br />성장하고 있는 골프존</p>
                             <p>한정된 공간에서 대형화면을 통해<br />게임의 중요한 순간마다 몰입감 높은 광고를 제공합니다.</p>
