--- a/sub/partnership/partnership.html
+++ b/sub/partnership/partnership.html
@@ -103,9 +103,9 @@
                         </div>
                         <div class="partnership_info_wrap">
                             <h3><span>01</span>국내 최다 골퍼 회원수 보유</h3>
-                            <div><img src="../../images/sub/img_partnership_info_1.png" alt="" /></div>
+                            <div><img src="../../images/sub/img_partnership_info_1.png?ver=2" alt="" /></div>
                             <h3><span>02</span>국내 최대 스크린골프 운영사</h3>
-                            <div><img src="../../images/sub/img_partnership_info_2.png" alt="" /></div>
+                            <div><img src="../../images/sub/img_partnership_info_2.png?ver=2" alt="" /></div>
                             <h3><span>03</span>스크린골프와 필드골프 혼용 시대!</h3>
                             <div><img src="../../images/sub/img_partnership_info_3.png" alt="" /></div>
                         </div>
@@ -114,9 +114,9 @@
                                 <h2>골퍼를 타겟으로<br />골프존의 다양한 광고 영역을 통해 신규 코스를 홍보합니다.</h2>
                                 <p class="sub_text_p">골프존 시뮬레이터/웹/앱 광고영역에 골프장 신규 코스가 노출됩니다.</p>
                                 <h3 style="margin-top:130px"><span>사례</span>360도 CC (2020.04.21 런칭)</h3>
-                                <div><img src="../../images/sub/img_partnership_info_4.png" alt="" /></div>
+                                <div><img src="../../images/sub/img_partnership_info_4.png?ver=2" alt="" /></div>
                                 <h3><span>사례</span>라싸 GC (2020.05.19 런칭)</h3>
-                                <div><img src="../../images/sub/img_partnership_info_5.png" alt="" /></div>
+                                <div><img src="../../images/sub/img_partnership_info_5.png?ver=2" alt="" /></div>
                             </div>
                         </div>
                         <div class="partnership_info_wrap" style="margin-top:150px">
@@ -162,7 +162,7 @@
                             <h2>골프장 제휴현황</h2>
                             <span>전국 257개의 골프장이 골프존과 함께 하고 있습니다.</span>
                             <span style="font-size:15px;color:#252525;margin-top:20px">(*투비전 시스템 서비스 기준 / 2022.05.10 기준)</span>
-                            <div style="margin-top:100px"><img src="../../images/sub/img_partnership_info_7.png" alt="" /></div>
+                            <div style="margin-top:100px"><img src="../../images/sub/img_partnership_info_7.png?ver=2" alt="" /></div>
                         </div>
                     </div>
                 </div><!--// tab2 -->
