--- a/main.html
+++ b/main.html
@@ -102,7 +102,7 @@
                       </div>
                       <div class="swiper-slide mt_img" style="background-image:url('images/main/nature-222.jpg?ver=2');background-repeat:no-repeat;background-size:cover;width:100%;height:963px;">
                         <div class="mt_img_text">
-                            <p>경제력이 높은 3050 타겟<br />이용횟수 매일 164,383 라운드</p>
+                            <p>강한 구매력, 3050 타겟<br />이용횟수 매일<br>평균 215,839회(RND) <em style="font-size: 16px;">*2021년 기준</em></p>
                             <p>골프존의 프리미엄 타겟은 언제든<br />여러분의 제품과 서비스를 경험할 준비가 되어있습니다.</p>
                         </div>
                       </div>
