--- a/sub/eventship/championship.html
+++ b/sub/eventship/championship.html
@@ -104,7 +104,7 @@
                 </div>
                 <div class="sub_tab_menu">
                     <style>
-                        .sub_tab_menu li{width:16.5% !important;}
+                        .sub_tab_menu li{width:49.5% !important;}
                         .sub_title{margin-bottom:0 !important}
                         .tab1_content{margin-top:115px !important}
                         dl{width:calc(33% - 30px) !important}
@@ -116,10 +116,10 @@
                     <ul>
                         <li data-id="tab1" class="on" style="padding:18px 0">골프존 라이브<br />페스티벌 GLF 대회</li>
                         <li data-id="tab2">GTOUR</li>
-                        <li data-id="tab3">OPEN TOUR</li>
+                        <!-- <li data-id="tab3">OPEN TOUR</li>
                         <li data-id="tab4">GATOUR</li>
                         <li data-id="tab5">생활체육대회</li>
-                        <li data-id="tab6">미드아마챔피언십</li>
+                        <li data-id="tab6">미드아마챔피언십</li> -->
                     </ul>
                 </div>
                 
@@ -158,10 +158,6 @@
                             </dl>
                             <dl>
                                 <dt>5</dt>
-                                <dd>판매 단가<br /><span>5천만원(1개CC,1개월)<br /><span style="margin-top:0;font-size:15px">*CC 1개 추가 비용 1,000만원</span></span></dd>
-                            </dl>
-                            <dl>
-                                <dt>6</dt>
                                 <dd>기타<br /><span>대회 시상품은 광고주 제공</span></dd>
                             </dl>
                         </div>
