--- a/sub/eventship/event.html
+++ b/sub/eventship/event.html
@@ -134,12 +134,14 @@
                         <div class="practice_info_wrap">
                             <dl>
                                 <dt>1</dt>
-                                <dd>티샷 시 페어웨이에 등장하는<br />
+                                <dd>
+                                    티샷 시 페어웨이에 등장하는<br />
                                     브랜딩 된 풍선(오브젝트) N회 출현,<br />
                                     N번 맞히면 미션 성공 <br />
                                     <span style="font-size:15px">*이벤트 발동/ 맞히는 횟수 설정 가능<br />
                                     출현 ㅣ 17회 이상 초과할 수 없음<br />
                                     성공 ㅣ 출현 횟수를 초과할 수 없음</span>
+                                </dd>
                             </dl>
                             <dl>
                                 <dt>2</dt>
@@ -246,20 +248,19 @@
                             </dl>
                             <dl>
                                 <dt>2</dt>
-                                <dd>미션 달성시 골프존앱 선물 상자를 통하여 선물 지급</dd>
-                            </dl>
-                            <dl>
-                                <dt>3</dt>
-                                <dd>광고 예상 노출량 : 약 1,200만회 <br />
-                                    <span style="font-size:15px">*이벤트CC 1개 추가시 노출량 2배</span>
-                            </dl>
-                            <dl>
-                                <dt>4</dt>
                                 <dd>예상 참여 횟수(라운드 수) : 12만~15만여 회</dd>
                             </dl>
                             <dl>
-                                <dt>5</dt>
+                                <dt>3</dt>
+                                <dd>미션 달성시 골프존앱 선물 상자를 통하여 선물 지급</dd>
+                            </dl>
+                            <dl>
+                                <dt>4</dt>
                                 <dd>판매단가 : 3,000만원 (1개CC, 1개월) <br /><span style="font-size:15px">*CC 1개 추가비용 1,000만원</span></dd>
+                            </dl>
+                            <dl>
+                                <dt>5</dt>
+                                <dd>광고 예상 노출량 : 약 1,200만회</span>
                             </dl>
                             <dl>
                                 <dt>6</dt>
@@ -346,21 +347,19 @@
                             </dl>
                             <dl>
                                 <dt>2</dt>
-                                <dd>미션 달성시 골프존앱 선물 상자를 통하여 선물 지급
-                                </dd>
-                            </dl>
-                            <dl>
-                                <dt>3</dt>
-                                <dd>광고 예상 노출량 : 약 1,200만회 <br />
-                                    <span style="font-size:15px">*이벤트CC 1개 추가시 노출량 2배</span>
-                            </dl>
-                            <dl>
-                                <dt>4</dt>
                                 <dd>예상 참여 횟수(라운드 수) : 12만~15만여 회</dd>
                             </dl>
                             <dl>
+                                <dt>3</dt>
+                                <dd>미션 달성시 골프존앱 선물 상자를 통하여 선물 지급</dd>
+                            </dl>
+                            <dl>
+                                <dt>4</dt>
+                                <dd>판매단가 : 5,000만원 (15개CC, 1개월)</dd>
+                            </dl>
+                            <dl>
                                 <dt>5</dt>
-                                <dd>판매단가 : 5,000만원 (15개CC, 1개월) <br /><span style="font-size:15px">*CC 1개 추가비용 1,000만원</span></dd>
+                                <dd>광고 예상 노출량 : 약 1,200만회</span>
                             </dl>
                             <dl>
                                 <dt>6</dt>
@@ -547,21 +546,20 @@
                             </dl>
                             <dl>
                                 <dt>2</dt>
+                                <dd>예상 참여 횟수(라운드 수) : 12만~15만여 회</dd>
+                            </dl>
+                            <dl>
+                                <dt>3</dt>
                                 <dd>미션 달성시 골프존앱 선물 상자를 통하여 선물 지급
                                 </dd>
                             </dl>
                             <dl>
-                                <dt>3</dt>
-                                <dd>광고 예상 노출량 : 약 1,200만회 <br />
-                                    <span style="font-size:15px">*이벤트CC 1개 추가시 노출량 2배</span>
-                            </dl>
-                            <dl>
                                 <dt>4</dt>
-                                <dd>예상 참여 횟수(라운드 수) : 12만~15만여 회</dd>
+                                <dd>판매단가 : 5,000만원 (15개CC, 1개월) <br /><span style="font-size:15px">*CC 1개 추가비용 1,000 만원</span></dd>
                             </dl>
                             <dl>
                                 <dt>5</dt>
-                                <dd>판매단가 : 5,000만원 (15개CC, 1개월) <br /><span style="font-size:15px">*CC 1개 추가비용 1,000 만원</span></dd>
+                                <dd>광고 예상 노출량 : 약 1,200만회</span>
                             </dl>
                             <dl>
                                 <dt>6</dt>
