--- a/sub/marketingsolution/marketing.html
+++ b/sub/marketingsolution/marketing.html
@@ -346,7 +346,7 @@
                                             No.1 골프정보 사이트 골프존닷컴을 통한 홍보와 동시에<br>
                                             골프존 회원 대상 스페셜 친구를 통해 홍보 및 타겟의 반응을 이끌어 낼 수 있었습니다.
                                             <p style="margin-top:30px"><b>
-                                            - 골프존 프리미엄 회원 40만명 대상 홍보
+                                            - 골프존 프리미엄 회원 40만명 대상 홍보<br>
                                             - 이벤트 참여 고객 대상 경품 증정 이벤트
                                             </b></p>
                                             </p>
@@ -1424,7 +1424,9 @@
                                     </dl>
                                     <dl>
                                         <dt>· 캠페인 진행사례</dt>
-                                        <dd style="margin-top:-8px">크리스패션, 와이드앵글 등의 골프웨어 제품홍보를 위하여<br />  
+                                        <dd style="margin-top:-8px">
+                                            크리스패션(마스터버니, 링스) 와이드앵글, 한성에프아이(테일러메이드, 레노마), <br />
+                                            유타골프웨어 등의 골프웨어 제품홍보를 위하여 <br />
                                             폐쇄된 공간에 큰 스크린을 활용하여 몰입도와 집중도가 높은 스크린 광고를 매년 집행하고 있습니다.
                                             <p style="margin-top:30px"><b>
                                                 - 15초 동영상 소재의 홀 입장 동영상 광고<br />  
