--- a/sub/partnership/partnership.html
+++ b/sub/partnership/partnership.html
@@ -185,7 +185,7 @@
                                 <h3 style="margin-top:130px"><span>01</span>골프존 시뮬레이터 - 로딩창이미지 코스 오픈 사전 홍보</h3>
                                 <div><img src="../../images/sub/img_partnership_info_10.png?ver=2" alt="" style="width:1142px" /></div>
                                 <h3><span>02</span>골프존 시뮬레이터 - 신규코스 탭</h3>
-                                <div><img src="../../images/sub/img_partnership_info_11.png?ver=2" alt="" style="width:768px" /></div>
+                                <div><img src="../../images/sub/img_partnership_info_11.jpg?ver=2" alt="" style="width:768px" /></div>
                                 <h3><span>03</span>골프존 닷컴</h3>
                                 <div><img src="../../images/sub/img_partnership_info_12.png?ver=2" alt="" /></div>
                                 <h3><span>04</span>골프존 앱</h3>
