--- a/sub/screen/ingame.html
+++ b/sub/screen/ingame.html
@@ -105,19 +105,19 @@
                             </dl>
                             <dl>
                                 <dt>2</dt>
-                                <dd>노출시점<br /><span>1홀(전반 첫 홀)입장시,<br />10홀(후반 첫 홀)입장 시</span></dd>
+                                <dd>노출시점<br /><span>[1홀 입장시 1-1 or 1-2] or <br>[10홀 입장시 10-1 or 10-2]</span></dd>
                             </dl>
                             <dl>
                                 <dt>3</dt>
-                                <dd>노출확률 (판매방식)<br /><span>코스그룹별 독점(A~C 그룹)</span></dd>
+                                <dd>노출확률 (판매방식)<br /><span>각 코스그룹별 독점 <br>(33% 확정 노출)</span></dd>
                             </dl>
                             <dl>
                                 <dt>4</dt>
-                                <dd>노출량<br /><span>월평균 200만회</span></dd>
+                                <dd>노출량<br /><span>200만회</span></dd>
                             </dl>
                             <dl>
                                 <dt>5</dt>
-                                <dd>단가<br /><span>2주 1,900만원<br />4주(1개월) : 3,500만원</span></dd>
+                                <dd>단가<br /><span>1개월 : 3,500만원</span></dd>
                             </dl>
                         </div>
                         <div class="game_info_wrap">
@@ -155,15 +155,15 @@
                             </dl>
                             <dl>
                                 <dt>3</dt>
-                                <dd>노출확률 (판매방식)<br /><span>1개홀 독점</span></dd>
+                                <dd>노출확률 (판매방식)<br /><span>각 홀 코스그룹별 독점<br>(50% 확정 노출)</span></dd>
                             </dl>
                             <dl>
                                 <dt>4</dt>
-                                <dd>노출량<br /><span>월평균 300만회</span></dd>
+                                <dd>노출량<br /><span>300만회</span></dd>
                             </dl>
                             <dl>
                                 <dt>5</dt>
-                                <dd>단가<br /><span>2주 1,500만원<br />4주(1개월) : 2,700만원</span></dd>
+                                <dd>단가<br /><span>1개월 : 1,800만원</span></dd>
                             </dl>
                         </div>
                     </div>
@@ -190,15 +190,15 @@
                             </dl>
                             <dl>
                                 <dt>3</dt>
-                                <dd>노출확률 (판매방식)<br /><span>1개홀 독점</span></dd>
+                                <dd>노출확률 (판매방식)<br /><span>각 홀 코스그룹별 독점<br>(50% 확정 노출)</span></dd>
                             </dl>
                             <dl>
                                 <dt>4</dt>
-                                <dd>노출량<br /><span>월평균 300만회</span></dd>
+                                <dd>노출량<br /><span>300만회</span></dd>
                             </dl>
                             <dl>
                                 <dt>5</dt>
-                                <dd>단가<br /><span>2주 1,400만원<br />4주(1개월) : 2,500만원</span></dd>
+                                <dd>단가<br /><span>1개월 : 1,500만원</span></dd>
                             </dl>
                         </div>
                     </div>
@@ -221,7 +221,7 @@
                             </dl>
                             <dl>
                                 <dt>2</dt>
-                                <dd>노출시점<br /><span>플레이 중 PAR 스코어<br />이상 기록시 상시</span></dd>
+                                <dd>노출시점<br /><span>PAR 스코어 이상 기록으로 <br>홀아웃시 상시</span></dd>
                             </dl>
                             <dl>
                                 <dt>3</dt>
@@ -229,11 +229,11 @@
                             </dl>
                             <dl>
                                 <dt>4</dt>
-                                <dd>노출량<br /><span>월평균 650만회</span></dd>
+                                <dd>노출량<br /><span>650만회</span></dd>
                             </dl>
                             <dl>
                                 <dt>5</dt>
-                                <dd>단가<br /><span>2주 800만원<br />4주(1개월) : 1,500만원</span></dd>
+                                <dd>단가<br /><span>1개월 : 2,000만원</span></dd>
                             </dl>
                         </div>
                     </div>
@@ -256,19 +256,19 @@
                             </dl>
                             <dl>
                                 <dt>2</dt>
-                                <dd>노출시점<br /><span>플레이 중 오잘공,<br />리플레이 영상,<br />오늘의 나스모 기록시 상시</span></dd>
+                                <dd>노출시점<br /><span>오잘공, 리플레이, <br>오늘의 나스모 기록시 상시</span></dd>
                             </dl>
                             <dl>
                                 <dt>3</dt>
-                                <dd>노출확률 (판매방식)<br /><span>20%(5구좌 롤링)</span></dd>
+                                <dd>노출확률 (판매방식)<br /><span>5구좌 롤링<br>(20% 확률 노출)</span></dd>
                             </dl>
                             <dl>
                                 <dt>4</dt>
-                                <dd>노출량<br /><span>월평균 6,000만회</span></dd>
+                                <dd>노출량<br /><span>6,000만회</span></dd>
                             </dl>
                             <dl>
                                 <dt>5</dt>
-                                <dd>단가<br /><span>2주 1,100만원<br />4주(1개월) : 2,000만원</span></dd>
+                                <dd>단가<br /><span>1개월 : 2,000만원</span></dd>
                             </dl>
                         </div>
                     </div>
