--- a/sub/screen/practice.html
+++ b/sub/screen/practice.html
@@ -82,7 +82,7 @@
                         <li data-id="tab1" class="on">연습장 입장 동영상<br />광고 세트</li>
                         <li data-id="tab2">연습장 대형 광고보드<br />(좌 혹은 우)</li>
                         <li data-id="tab3">연습장 티박스 파티션<br />+ 티박스 바닥 광고</li>
-                        <li data-id="tab4">연습장 펜스<br />+ 150M 바닥 광고</li>
+                        <li data-id="tab4">연습장 펜스<br />(좌 혹은 우)</li>
                         <li data-id="tab5">연습장<br />퇴장 광고</li>
                     </ul>
                 </div>
@@ -101,23 +101,23 @@
                         <div class="practice_info_wrap">
                             <dl>
                                 <dt>1</dt>
-                                <dd>노출방식 및 시간<br /><span>동영상 15초 + 이미지</span></dd>
+                                <dd>노출방식 및 시간<br /><span>동영상 15초 + <br>로딩창 이미지 1초</span></dd>
                             </dl>
                             <dl>
                                 <dt>2</dt>
-                                <dd>노출시점<br /><span>연습장 입장시 노출</span></dd>
+                                <dd>노출시점<br /><span>연습장 입장시</span></dd>
                             </dl>
                             <dl>
                                 <dt>3</dt>
-                                <dd>노출확률 (판매방식)<br /><span>50%(2구좌 롤링)</span></dd>
+                                <dd>노출확률 (판매방식)<br /><span>2구좌 롤링(50% 확률 노출)</span></dd>
                             </dl>
                             <dl>
                                 <dt>4</dt>
-                                <dd>노출량<br /><span>월평균 330만회</span></dd>
+                                <dd>노출량<br /><span>330만회</span></dd>
                             </dl>
                             <dl>
                                 <dt>5</dt>
-                                <dd>단가<br /><span>2주 1,800만원<br />4주(1개월) : 3,500만원</span></dd>
+                                <dd>단가<br /><span>1개월 : 3,500만원</span></dd>
                             </dl>
                         </div>
                     </div>
@@ -145,15 +145,15 @@
                             </dl>
                             <dl>
                                 <dt>3</dt>
-                                <dd>노출확률 (판매방식)<br /><span>독점</span></dd>
+                                <dd>노출확률 (판매방식)<br /><span>2구좌 롤링(50% 확률 노출)</span></dd>
                             </dl>
                             <dl>
                                 <dt>4</dt>
-                                <dd>노출량<br /><span>월평균 650만회</span></dd>
+                                <dd>노출량<br /><span>650만회</span></dd>
                             </dl>
                             <dl>
                                 <dt>5</dt>
-                                <dd>단가<br /><span>좌측 4주(1개월) : 2,000만원 <br />우측 4주(1개월) : 1,500만원</span></dd>
+                                <dd>단가<br /><span>좌측 1개월 : 2,000만원 <br />우측 1개월 : 1,500만원</span></dd>
                             </dl>
                         </div>
                     </div>
@@ -184,11 +184,11 @@
                             </dl>
                             <dl>
                                 <dt>4</dt>
-                                <dd>노출량<br /><span>월평균 650만회</span></dd>
+                                <dd>노출량<br /><span>650만회</span></dd>
                             </dl>
                             <dl>
                                 <dt>5</dt>
-                                <dd>단가<br /><span>2주 : 1,100만원<br />4주 : 2,000만원</span></dd>
+                                <dd>단가<br /><span>1개월 : 2,000만원</span></dd>
                             </dl>
                         </div>
                     </div>
@@ -198,7 +198,7 @@
                         <img src="../../images/sub/img_sub_userflow.png" alt="userflow" />
                     </div>
                     <div class="tab1_content">
-                        <h3>연습장 펜스 + 150M 바닥 광고</h3>
+                        <h3>연습장 펜스 (좌 혹은 우)</h3>
                         <div class="movie_wrap">
                             <iframe width="100%" height="675" src="https://www.youtube.com/embed/YAKr-waqHJA" frameborder="0" 
                             allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
@@ -215,15 +215,15 @@
                             </dl>
                             <dl>
                                 <dt>3</dt>
-                                <dd>노출확률 (판매방식)<br /><span>독점</span></dd>
+                                <dd>노출확률 (판매방식)<br /><span>3구좌 롤링(33% 확률 노출)</span></dd>
                             </dl>
                             <dl>
                                 <dt>4</dt>
-                                <dd>노출량<br /><span>월평균 220만회</span></dd>
+                                <dd>노출량<br /><span>220만회</span></dd>
                             </dl>
                             <dl>
                                 <dt>5</dt>
-                                <dd>단가<br /><span>2주 : 800만원<br />4주 : 1,500만원</span></dd>
+                                <dd>단가<br /><span>1개월 : 1,000만원</span></dd>
                             </dl>
                         </div>
                     </div>
@@ -254,7 +254,7 @@
                             </dl>
                             <dl>
                                 <dt>4</dt>
-                                <dd>노출량<br /><span>월평균 650만회</span></dd>
+                                <dd>노출량<br /><span>650만회</span></dd>
                             </dl>
                             <dl>
                                 <dt>5</dt>
