--- a/sub/eventship/event.html
+++ b/sub/eventship/event.html
@@ -248,11 +248,14 @@
                             </dl>
                             <dl>
                                 <dt>2</dt>
-                                <dd>예상 참여 횟수(라운드 수) : 12만~15만여 회</dd>
+                                <dd>예상 참여 횟수 (라운드 수)<br />
+                                    <span>12만~15만여 회</span></dd>
                             </dl>
                             <dl>
                                 <dt>3</dt>
-                                <dd>미션 달성시 골프존앱 선물 상자를 통하여 선물 지급</dd>
+                                <dd>미션 달성 시 골프존 앱 <br />
+                                    선물 상자를 통하여<br />
+                                    선물 지급</dd>
                             </dl>
                             <dl>
                                 <dt>4</dt>
@@ -260,7 +263,7 @@
                             </dl>
                             <dl>
                                 <dt>5</dt>
-                                <dd>광고 예상 노출량 : 약 1,200만회</span>
+                                <dd>광고 예상 노출량<br /><span>1,200만회</span></dd>
                             </dl>
                             <dl>
                                 <dt>6</dt>
@@ -347,11 +350,14 @@
                             </dl>
                             <dl>
                                 <dt>2</dt>
-                                <dd>예상 참여 횟수(라운드 수) : 12만~15만여 회</dd>
+                                <dd>예상 참여 횟수 (라운드 수)<br />
+                                    <span>12만~15만여 회</span></dd>
                             </dl>
                             <dl>
                                 <dt>3</dt>
-                                <dd>미션 달성시 골프존앱 선물 상자를 통하여 선물 지급</dd>
+                                <dd>미션 달성 시 골프존 앱 <br />
+                                    선물 상자를 통하여<br />
+                                    선물 지급</dd>
                             </dl>
                             <dl>
                                 <dt>4</dt>
@@ -359,7 +365,7 @@
                             </dl>
                             <dl>
                                 <dt>5</dt>
-                                <dd>광고 예상 노출량 : 약 1,200만회</span>
+                                <dd>광고 예상 노출량<br /><span>1,200만회</span></dd>
                             </dl>
                             <dl>
                                 <dt>6</dt>
@@ -451,8 +457,7 @@
                             </dl>
                             <dl>
                                 <dt>3</dt>
-                                <dd>광고 예상 노출량 : 약 1,200만회 <br />
-                                    <span style="font-size:15px">*이벤트CC 1개 추가시 노출량 2배</span>
+                                <dd>광고 예상 노출량<br /><span>1,200만회</span><br><span style="font-size:15px">*이벤트CC 1개 추가시 노출량 2배</span></dd>
                             </dl>
                             <dl>
                                 <dt>4</dt>
@@ -546,16 +551,19 @@
                             </dl>
                             <dl>
                                 <dt>2</dt>
-                                <dd>예상 참여 횟수(라운드 수) : 12만~15만여 회</dd>
+                                <dd>예상 참여 횟수 (라운드 수)<br />
+                                    <span>12만~15만여 회</span></dd>
                             </dl>
                             <dl>
                                 <dt>3</dt>
-                                <dd>미션 달성시 골프존앱 선물 상자를 통하여 선물 지급
-                                </dd>
+                                <dd>미션 달성 시 골프존 앱 <br />
+                                    선물 상자를 통하여<br />
+                                    선물 지급</dd>
                             </dl>
                             <dl>
                                 <dt>4</dt>
-                                <dd>판매단가 : 5,000만원 (15개CC, 1개월) <br /><span style="font-size:15px">*CC 1개 추가비용 1,000 만원</span></dd>
+                                <dd>판매단가<br /><span>5,000만원 (15개CC, 1개월)<br />
+                                    <span style="font-size:15px">*CC 1개 추가비용 1,000만원</span></span></dd>
                             </dl>
                             <dl>
                                 <dt>5</dt>
@@ -644,13 +652,15 @@
                             </dl>
                             <dl>
                                 <dt>2</dt>
-                                <dd>광고 예상 노출량 : 약 20,000만회 <br />
+                                <dd>광고 예상 노출량<br /><span>20,000만회</span></dd>
                                     <!--<span style="font-size:15px">*이벤트CC 1개 추가시 노출량 2배</span>-->
                             </dl>
                             <dl>
                                 <dt>3</dt>
-                                <dd>예상 참여 횟수(라운드 수) : 60만여 회 + α<br /><span style="font-size:15px"> [자세한 내용은 골프존 광고전문가에게 문의해 주세요]
-                                </span>
+                                <dd>
+                                    예상 참여 횟수 (라운드 수)<br />
+                                    <span>60만여 회 + α</span><br />
+                                    <span style="font-size:15px"> [자세한 내용은 골프존 광고전문가에게 문의해 주세요]</span>
                                 </dd>
                             </dl>
                         </div>
